# jupyter-annotation-tool-ipynbd

./: .gitignore  LICENSE  README.md  export_ipynbd.py  install.json  package-lock.json  package.json  pyproject.toml  save_load_test.ipynb  tsconfig.json
src/: index.ts
